--- a/src/style.css
+++ b/src/style.css
@@ -5,5 +5,6 @@
   --font-bebas-neue: "Bebas Neue", sans-serif; 
    --font-roboto: "Roboto", sans-serif; 
    --color-primary: #211d1f;
-   --color-secondary: #fec934;
+   --color-secondary: #fac507;
+   --color-tertiary: #d07cca;
 }
